--- a/index.html
+++ b/index.html
@@ -21,79 +21,127 @@
     <main class="content">
       <section class="profile">
         <img src="images/Avatar.png" alt="Аватар" class="profile__avatar">
-        <div class="info">
-          <div class="profile__info">
-            <h2 class="profile__name">Жак-Ив Кусто</h2>
+        <div class="profile__info">
+          <div class="profile__heading">
+            <h1 class="profile__name">Жак-Ив Кусто</h1>
             <button type="button" class="profile__edit-button">
-              <img src="images/Edit-button.svg" alt="Edit" class="profile__edit-pic">
+              <img src="images/Edit-button.svg" alt="Изменить" class="profile__edit-pic">
             </button>
-            <h3 class="profile__status">Исследователь океана</h3>
+            <p class="profile__status">Исследователь океана</p>
           </div>
           <button type="button" class="profile__add-button">
-            <img src="images/Plus.svg" alt="Plus picture" class="profile__add-pic">
+            <img src="images/Plus.svg" alt="Добавить" class="profile__add-pic">
           </button>
         </div>
       </section>
-      <section class="photos">
-        <ul class="cards">
+      <section class="cards">
+        <ul class="cards__list">
           <li class="cards__item">
-            <img src="images/Karachaevsk.jpg" alt="Karachaevsk" class="cards__image">
+            <img src="images/Karachaevsk.jpg" alt="Карачаевск" class="cards__image">
             <div class="cards__info">
-              <h3 class="cards__name">Карачаевск</h3>
-              <label class="cards__label">
-                <input type="checkbox" name="like" value="like" class="cards__like">
-                <span class="cards__pseudo-like"></span>
-              </label>
+              <h2 class="cards__name">Карачаевск</h2>
+              <button type="button" class="cards__button-like">
+                <svg class="cards__like-picture" width="22" height="19" viewBox="0 0 22 19" fill="none"
+                  xmlns="http://www.w3.org/2000/svg">
+                  <path class="cards__like cards__like_fill_background cards__like_active" fill-rule="evenodd"
+                    clip-rule="evenodd"
+                    d="M20.2991 1.68186C22.567 3.90213 22.567 7.54338 20.2991 9.78586L10.9804 19L1.6841 9.80806C0.606277 8.72013 0 7.27695 0 5.74496C0 4.21297 0.583823 2.76979 1.6841 1.68186C3.92957 -0.560619 7.61215 -0.560619 9.88007 1.70406L10.9804 2.792L12.0806 1.68186C14.3486 -0.560619 18.0311 -0.560619 20.2991 1.68186Z"
+                    fill="black" />
+                  <path class="cards__like cards__like_fill_stroke cards__like_active"
+                    d="M20.2991 9.78586C22.567 7.54338 22.567 3.90213 20.2991 1.68186C18.0311 -0.560619 14.3486 -0.560619 12.0806 1.68186L10.9804 2.792L9.88007 1.70406C7.61215 -0.560619 3.92957 -0.560619 1.6841 1.68186C0.583822 2.76979 0 4.21297 0 5.74496C0 7.27695 0.606277 8.72013 1.6841 9.80806L10.9804 19L20.2991 9.78586ZM1.4371 5.74496C1.4371 4.59042 1.8862 3.52469 2.71702 2.72539C3.5703 1.88168 4.67058 1.45983 5.77086 1.45983C6.87114 1.45983 7.97142 1.88168 8.8247 2.72539L10.9804 4.83465L13.136 2.70318C14.8201 1.03798 17.582 1.03798 19.2437 2.70318C20.0521 3.50248 20.5236 4.56822 20.5236 5.72276C20.5236 6.8773 20.0745 7.94303 19.2437 8.74233L10.9804 16.9351L2.71702 8.76453C1.90865 7.94303 1.4371 6.8773 1.4371 5.74496Z"
+                    fill="black" />
+                </svg>
+              </button>
             </div>
           </li>
           <li class="cards__item">
-            <img src="images/Elbrus.jpg" alt="Elbrus" class="cards__image">
+            <img src="images/Elbrus.jpg" alt="Гора Эльбрус" class="cards__image">
             <div class="cards__info">
-              <h3 class="cards__name">Гора Эльбрус</h3>
-              <label class="cards__label">
-                <input type="checkbox" name="like" value="like" class="cards__like">
-                <span class="cards__pseudo-like"></span>
-              </label>
+              <h2 class="cards__name">Гора Эльбрус</h2>
+              <button type="button" class="cards__button-like">
+                <svg class="cards__like-picture" width="22" height="19" viewBox="0 0 22 19" fill="none"
+                  xmlns="http://www.w3.org/2000/svg">
+                  <path class="cards__like cards__like_fill_background cards__like_active" fill-rule="evenodd"
+                    clip-rule="evenodd"
+                    d="M20.2991 1.68186C22.567 3.90213 22.567 7.54338 20.2991 9.78586L10.9804 19L1.6841 9.80806C0.606277 8.72013 0 7.27695 0 5.74496C0 4.21297 0.583823 2.76979 1.6841 1.68186C3.92957 -0.560619 7.61215 -0.560619 9.88007 1.70406L10.9804 2.792L12.0806 1.68186C14.3486 -0.560619 18.0311 -0.560619 20.2991 1.68186Z"
+                    fill="black" />
+                  <path class="cards__like cards__like_fill_stroke cards__like_active"
+                    d="M20.2991 9.78586C22.567 7.54338 22.567 3.90213 20.2991 1.68186C18.0311 -0.560619 14.3486 -0.560619 12.0806 1.68186L10.9804 2.792L9.88007 1.70406C7.61215 -0.560619 3.92957 -0.560619 1.6841 1.68186C0.583822 2.76979 0 4.21297 0 5.74496C0 7.27695 0.606277 8.72013 1.6841 9.80806L10.9804 19L20.2991 9.78586ZM1.4371 5.74496C1.4371 4.59042 1.8862 3.52469 2.71702 2.72539C3.5703 1.88168 4.67058 1.45983 5.77086 1.45983C6.87114 1.45983 7.97142 1.88168 8.8247 2.72539L10.9804 4.83465L13.136 2.70318C14.8201 1.03798 17.582 1.03798 19.2437 2.70318C20.0521 3.50248 20.5236 4.56822 20.5236 5.72276C20.5236 6.8773 20.0745 7.94303 19.2437 8.74233L10.9804 16.9351L2.71702 8.76453C1.90865 7.94303 1.4371 6.8773 1.4371 5.74496Z"
+                    fill="black" />
+                </svg>
+              </button>
             </div>
           </li>
           <li class="cards__item">
-            <img src="images/Dombay.jpg" alt="Dombay" class="cards__image">
+            <img src="images/Dombay.jpg" alt="Домбай" class="cards__image">
             <div class="cards__info">
-              <h3 class="cards__name">Домбай</h3>
-              <label class="cards__label">
-                <input type="checkbox" name="like" value="like" class="cards__like">
-                <span class="cards__pseudo-like"></span>
-              </label>
+              <h2 class="cards__name">Домбай</h2>
+              <button type="button" class="cards__button-like">
+                <svg class="cards__like-picture" width="22" height="19" viewBox="0 0 22 19" fill="none"
+                  xmlns="http://www.w3.org/2000/svg">
+                  <path class="cards__like cards__like_fill_background cards__like_active" fill-rule="evenodd"
+                    clip-rule="evenodd"
+                    d="M20.2991 1.68186C22.567 3.90213 22.567 7.54338 20.2991 9.78586L10.9804 19L1.6841 9.80806C0.606277 8.72013 0 7.27695 0 5.74496C0 4.21297 0.583823 2.76979 1.6841 1.68186C3.92957 -0.560619 7.61215 -0.560619 9.88007 1.70406L10.9804 2.792L12.0806 1.68186C14.3486 -0.560619 18.0311 -0.560619 20.2991 1.68186Z"
+                    fill="black" />
+                  <path class="cards__like cards__like_fill_stroke cards__like_active"
+                    d="M20.2991 9.78586C22.567 7.54338 22.567 3.90213 20.2991 1.68186C18.0311 -0.560619 14.3486 -0.560619 12.0806 1.68186L10.9804 2.792L9.88007 1.70406C7.61215 -0.560619 3.92957 -0.560619 1.6841 1.68186C0.583822 2.76979 0 4.21297 0 5.74496C0 7.27695 0.606277 8.72013 1.6841 9.80806L10.9804 19L20.2991 9.78586ZM1.4371 5.74496C1.4371 4.59042 1.8862 3.52469 2.71702 2.72539C3.5703 1.88168 4.67058 1.45983 5.77086 1.45983C6.87114 1.45983 7.97142 1.88168 8.8247 2.72539L10.9804 4.83465L13.136 2.70318C14.8201 1.03798 17.582 1.03798 19.2437 2.70318C20.0521 3.50248 20.5236 4.56822 20.5236 5.72276C20.5236 6.8773 20.0745 7.94303 19.2437 8.74233L10.9804 16.9351L2.71702 8.76453C1.90865 7.94303 1.4371 6.8773 1.4371 5.74496Z"
+                    fill="black" />
+                </svg>
+              </button>
             </div>
           </li>
           <li class="cards__item">
-            <img src="images/Elbrus.jpg" alt="Elbrus" class="cards__image">
+            <img src="images/Elbrus.jpg" alt="Гора Эльбрус" class="cards__image">
             <div class="cards__info">
-              <h3 class="cards__name">Гора Эльбрус</h3>
-              <label class="cards__label">
-                <input type="checkbox" name="like" value="like" class="cards__like">
-                <span class="cards__pseudo-like"></span>
-              </label>
+              <h2 class="cards__name">Гора Эльбрус</h2>
+              <button type="button" class="cards__button-like">
+                <svg class="cards__like-picture" width="22" height="19" viewBox="0 0 22 19" fill="none"
+                  xmlns="http://www.w3.org/2000/svg">
+                  <path class="cards__like cards__like_fill_background cards__like_active" fill-rule="evenodd"
+                    clip-rule="evenodd"
+                    d="M20.2991 1.68186C22.567 3.90213 22.567 7.54338 20.2991 9.78586L10.9804 19L1.6841 9.80806C0.606277 8.72013 0 7.27695 0 5.74496C0 4.21297 0.583823 2.76979 1.6841 1.68186C3.92957 -0.560619 7.61215 -0.560619 9.88007 1.70406L10.9804 2.792L12.0806 1.68186C14.3486 -0.560619 18.0311 -0.560619 20.2991 1.68186Z"
+                    fill="black" />
+                  <path class="cards__like cards__like_fill_stroke cards__like_active"
+                    d="M20.2991 9.78586C22.567 7.54338 22.567 3.90213 20.2991 1.68186C18.0311 -0.560619 14.3486 -0.560619 12.0806 1.68186L10.9804 2.792L9.88007 1.70406C7.61215 -0.560619 3.92957 -0.560619 1.6841 1.68186C0.583822 2.76979 0 4.21297 0 5.74496C0 7.27695 0.606277 8.72013 1.6841 9.80806L10.9804 19L20.2991 9.78586ZM1.4371 5.74496C1.4371 4.59042 1.8862 3.52469 2.71702 2.72539C3.5703 1.88168 4.67058 1.45983 5.77086 1.45983C6.87114 1.45983 7.97142 1.88168 8.8247 2.72539L10.9804 4.83465L13.136 2.70318C14.8201 1.03798 17.582 1.03798 19.2437 2.70318C20.0521 3.50248 20.5236 4.56822 20.5236 5.72276C20.5236 6.8773 20.0745 7.94303 19.2437 8.74233L10.9804 16.9351L2.71702 8.76453C1.90865 7.94303 1.4371 6.8773 1.4371 5.74496Z"
+                    fill="black" />
+                </svg>
+              </button>
             </div>
           </li>
           <li class="cards__item">
-            <img src="images/Dombay.jpg" alt="Dombay" class="cards__image">
+            <img src="images/Dombay.jpg" alt="Домбай" class="cards__image">
             <div class="cards__info">
-              <h3 class="cards__name">Домбай</h3>
-              <label class="cards__label">
-                <input type="checkbox" name="like" value="like" class="cards__like">
-                <span class="cards__pseudo-like"></span>
-              </label>
+              <h2 class="cards__name">Домбай</h2>
+              <button type="button" class="cards__button-like">
+                <svg class="cards__like-picture" width="22" height="19" viewBox="0 0 22 19" fill="none"
+                  xmlns="http://www.w3.org/2000/svg">
+                  <path class="cards__like cards__like_fill_background cards__like_active" fill-rule="evenodd"
+                    clip-rule="evenodd"
+                    d="M20.2991 1.68186C22.567 3.90213 22.567 7.54338 20.2991 9.78586L10.9804 19L1.6841 9.80806C0.606277 8.72013 0 7.27695 0 5.74496C0 4.21297 0.583823 2.76979 1.6841 1.68186C3.92957 -0.560619 7.61215 -0.560619 9.88007 1.70406L10.9804 2.792L12.0806 1.68186C14.3486 -0.560619 18.0311 -0.560619 20.2991 1.68186Z"
+                    fill="black" />
+                  <path class="cards__like cards__like_fill_stroke cards__like_active"
+                    d="M20.2991 9.78586C22.567 7.54338 22.567 3.90213 20.2991 1.68186C18.0311 -0.560619 14.3486 -0.560619 12.0806 1.68186L10.9804 2.792L9.88007 1.70406C7.61215 -0.560619 3.92957 -0.560619 1.6841 1.68186C0.583822 2.76979 0 4.21297 0 5.74496C0 7.27695 0.606277 8.72013 1.6841 9.80806L10.9804 19L20.2991 9.78586ZM1.4371 5.74496C1.4371 4.59042 1.8862 3.52469 2.71702 2.72539C3.5703 1.88168 4.67058 1.45983 5.77086 1.45983C6.87114 1.45983 7.97142 1.88168 8.8247 2.72539L10.9804 4.83465L13.136 2.70318C14.8201 1.03798 17.582 1.03798 19.2437 2.70318C20.0521 3.50248 20.5236 4.56822 20.5236 5.72276C20.5236 6.8773 20.0745 7.94303 19.2437 8.74233L10.9804 16.9351L2.71702 8.76453C1.90865 7.94303 1.4371 6.8773 1.4371 5.74496Z"
+                    fill="black" />
+                </svg>
+              </button>
             </div>
           </li>
           <li class="cards__item">
-            <img src="images/Karachaevsk.jpg" alt="Karachaevsk" class="cards__image">
+            <img src="images/Karachaevsk.jpg" alt="Карачаевск" class="cards__image">
             <div class="cards__info">
-              <h3 class="cards__name">Карачаево-Черкеская республика</h3>
-              <label class="cards__label">
-                <input type="checkbox" name="like" value="like" class="cards__like">
-                <span class="cards__pseudo-like"></span>
-              </label>
+              <h2 class="cards__name">Карачаево-Черкеская республика</h2>
+              <button type="button" class="cards__button-like">
+                <svg class="cards__like-picture" width="22" height="19" viewBox="0 0 22 19" fill="none"
+                  xmlns="http://www.w3.org/2000/svg">
+                  <path class="cards__like cards__like_fill_background cards__like_active" fill-rule="evenodd"
+                    clip-rule="evenodd"
+                    d="M20.2991 1.68186C22.567 3.90213 22.567 7.54338 20.2991 9.78586L10.9804 19L1.6841 9.80806C0.606277 8.72013 0 7.27695 0 5.74496C0 4.21297 0.583823 2.76979 1.6841 1.68186C3.92957 -0.560619 7.61215 -0.560619 9.88007 1.70406L10.9804 2.792L12.0806 1.68186C14.3486 -0.560619 18.0311 -0.560619 20.2991 1.68186Z"
+                    fill="black" />
+                  <path class="cards__like cards__like_fill_stroke cards__like_active"
+                    d="M20.2991 9.78586C22.567 7.54338 22.567 3.90213 20.2991 1.68186C18.0311 -0.560619 14.3486 -0.560619 12.0806 1.68186L10.9804 2.792L9.88007 1.70406C7.61215 -0.560619 3.92957 -0.560619 1.6841 1.68186C0.583822 2.76979 0 4.21297 0 5.74496C0 7.27695 0.606277 8.72013 1.6841 9.80806L10.9804 19L20.2991 9.78586ZM1.4371 5.74496C1.4371 4.59042 1.8862 3.52469 2.71702 2.72539C3.5703 1.88168 4.67058 1.45983 5.77086 1.45983C6.87114 1.45983 7.97142 1.88168 8.8247 2.72539L10.9804 4.83465L13.136 2.70318C14.8201 1.03798 17.582 1.03798 19.2437 2.70318C20.0521 3.50248 20.5236 4.56822 20.5236 5.72276C20.5236 6.8773 20.0745 7.94303 19.2437 8.74233L10.9804 16.9351L2.71702 8.76453C1.90865 7.94303 1.4371 6.8773 1.4371 5.74496Z"
+                    fill="black" />
+                </svg>
+              </button>
             </div>
           </li>
         </ul>
@@ -102,13 +150,13 @@
     <footer class="footer">
       <p class="footer__info">&copy; 2020 Mesto Russia</p>
     </footer>
-    <section class="popup">
+    <div class="popup">
       <div class="popup__container">
         <h3 class="popup__title">Редактировать профиль</h3>
         <button type="button" class="popup__close">
           <img class="popup__close-pic" src="images/Close-icon.svg" alt="Крестик для закрытия окна">
         </button>
-        <form class="form">
+        <form class="form" name="profile-form">
           <fieldset class="form__user-info">
             <input type="text" name="name" value="Жак-Ив Кусто" class="form__item form__item_el_user-name">
             <input type="text" name="status" value="Исследователь океана" class="form__item form__item_el_user-status">
@@ -116,7 +164,7 @@
           </fieldset>
         </form>
       </div>
-    </section>
+    </div>
   </div>
 </body>
 
