--- a/index.html
+++ b/index.html
@@ -102,6 +102,24 @@
         </form>
       </div>
     </div>
+    <div class="popup popup_add-card">
+      <div class="popup__container popup__container_add-card">
+        <h3 class="popup__title popup__title_add-card">Новое место</h3>
+        <button type="button" class="popup__close popup__close_add-card">
+          <img class="popup__close-pic popup__close-pic_add-card" src="images/Close-icon.svg"
+            alt="Крестик для закрытия окна">
+        </button>
+        <form class="form form_add-card" name="profile-form">
+          <fieldset class="form__user-info form__user-info_add-card">
+            <div class="form__items form-items_add-card">
+              <input type="text" name="name" value="Название" class="form__item form__item_el_name_place">
+              <input type="text" name="status" value="Ссылка на картинку" class="form__item form__item_el_photo-link">
+            </div>
+            <button type="submit" class="form__button form__button_add-card">Сохранить</button>
+          </fieldset>
+        </form>
+      </div>
+    </div>
   </div>
   <script src="script.js"></script>
 </body>
