--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       </section>
       <section class="cards">
         <ul class="cards__list">
-          <li class="cards__item">
+          <!-- <li class="cards__item">
             <img src="images/Karachaevsk.jpg" alt="Карачаевск" class="cards__image">
             <div class="cards__info">
               <h2 class="cards__name">Карачаевск</h2>
@@ -77,7 +77,7 @@
               <h2 class="cards__name">Карачаево-Черкеская республика</h2>
               <button type="button" class="cards__button-like"></button>
             </div>
-          </li>
+          </li> -->
         </ul>
       </section>
     </main>
@@ -90,14 +90,13 @@
         <button type="button" class="popup__close">
           <img class="popup__close-pic" src="images/Close-icon.svg" alt="Крестик для закрытия окна">
         </button>
-        <form class="form" name="profile-form">
+        <form class="form form_edit" name="profile-form">
           <fieldset class="form__user-info">
             <div class="form__items">
-              <input type="text" name="name" value="Жак-Ив Кусто" class="form__item form__item_el_user-name">
-              <input type="text" name="status" value="Исследователь океана"
-                class="form__item form__item_el_user-status">
+              <input type="text" name="name" value="" class="form__item form__item_el_user-name">
+              <input type="text" name="status" value="" class="form__item form__item_el_user-status">
             </div>
-            <button type="submit" class="form__button">Сохранить</button>
+            <button type="submit" class="form__button form__button_edit">Сохранить</button>
           </fieldset>
         </form>
       </div>
@@ -112,8 +111,10 @@
         <form class="form form_add-card" name="profile-form">
           <fieldset class="form__user-info form__user-info_add-card">
             <div class="form__items form-items_add-card">
-              <input type="text" name="name" value="Название" class="form__item form__item_el_name_place">
-              <input type="text" name="status" value="Ссылка на картинку" class="form__item form__item_el_photo-link">
+              <input type="text" name="name" value="" placeholder="Название"
+                class="form__item form__item_el_name_place">
+              <input type="text" name="status" value="" placeholder="Ссылка на картинку"
+                class="form__item form__item_el_photo-link">
             </div>
             <button type="submit" class="form__button form__button_add-card">Сохранить</button>
           </fieldset>
