created adding cards

--- a/index.html
+++ b/index.html
@@ -122,6 +122,15 @@
       </div>
     </div>
   </div>
+  <template id="card-template">
+    <li class="cards__item">
+      <img src="" alt="" class="cards__image">
+      <div class="cards__info">
+        <h2 class="cards__name"></h2>
+        <button type="button" class="cards__button-like"></button>
+      </div>
+    </li>
+  </template>
   <script src="script.js"></script>
 </body>
 
