added remove cards

--- a/index.html
+++ b/index.html
@@ -125,6 +125,7 @@
   <template id="card-template">
     <li class="cards__item">
       <img src="" alt="" class="cards__image">
+      <button type="button" class="cards__remove"></button>
       <div class="cards__info">
         <h2 class="cards__name"></h2>
         <button type="button" class="cards__button-like"></button>
