added opening image

--- a/index.html
+++ b/index.html
@@ -35,50 +35,7 @@
         </div>
       </section>
       <section class="cards">
-        <ul class="cards__list">
-          <!-- <li class="cards__item">
-            <img src="images/Karachaevsk.jpg" alt="Карачаевск" class="cards__image">
-            <div class="cards__info">
-              <h2 class="cards__name">Карачаевск</h2>
-              <button type="button" class="cards__button-like"></button>
-            </div>
-          </li>
-          <li class="cards__item">
-            <img src="images/Elbrus.jpg" alt="Гора Эльбрус" class="cards__image">
-            <div class="cards__info">
-              <h2 class="cards__name">Гора Эльбрус</h2>
-              <button type="button" class="cards__button-like"></button>
-            </div>
-          </li>
-          <li class="cards__item">
-            <img src="images/Dombay.jpg" alt="Домбай" class="cards__image">
-            <div class="cards__info">
-              <h2 class="cards__name">Домбай</h2>
-              <button type="button" class="cards__button-like"></button>
-            </div>
-          </li>
-          <li class="cards__item">
-            <img src="images/Elbrus.jpg" alt="Гора Эльбрус" class="cards__image">
-            <div class="cards__info">
-              <h2 class="cards__name">Гора Эльбрус</h2>
-              <button type="button" class="cards__button-like"></button>
-            </div>
-          </li>
-          <li class="cards__item">
-            <img src="images/Dombay.jpg" alt="Домбай" class="cards__image">
-            <div class="cards__info">
-              <h2 class="cards__name">Домбай</h2>
-              <button type="button" class="cards__button-like"></button>
-            </div>
-          </li>
-          <li class="cards__item">
-            <img src="images/Karachaevsk.jpg" alt="Карачаевск" class="cards__image">
-            <div class="cards__info">
-              <h2 class="cards__name">Карачаево-Черкеская республика</h2>
-              <button type="button" class="cards__button-like"></button>
-            </div>
-          </li> -->
-        </ul>
+        <ul class="cards__list"></ul>
       </section>
     </main>
     <footer class="footer">
@@ -119,6 +76,16 @@
             <button type="submit" class="form__button form__button_add-card">Сохранить</button>
           </fieldset>
         </form>
+      </div>
+    </div>
+    <div class="popup image-popup">
+      <div class="image-popup__figure">
+        <img src="" alt="" class="image-popup__picture">
+        <button type="button" class="popup__close popup__close_image-popup">
+          <img src="images/Close-icon.svg" alt="Крестик для закрытия окна"
+            class="popup__close-pic popup__close-pic_image-popup">
+        </button>
+        <figcaption class="image-popup__caption"></figcaption>
       </div>
     </div>
   </div>
