--- a/src/index.html
+++ b/src/index.html
@@ -19,14 +19,21 @@
     </header>
     <main class="content">
       <section class="profile">
-        <img src="<%=require('./images/Avatar.png')%>" alt="Аватар" class="profile__avatar">
+        <div class="profile__avatar">
+          <img src="" alt="Аватар" class="profile__avatar-image">
+          <button type="button" class="profile__edit-avatar">
+            <img src="<%=require('./images/Avatar-edit-button.svg')%>" alt="Кнопка редактирования аватара"
+              class="profile__edit-avatar-image">
+          </button>
+          <div class="profile__overlay"></div>
+        </div>
         <div class="profile__info">
           <div class="profile__heading">
-            <h1 class="profile__name">Жак-Ив Кусто</h1>
+            <h1 class="profile__name"></h1>
             <button type="button" class="profile__edit-button">
               <img src="<%=require('./images/Edit-button.svg')%>" alt=" Изменить" class="profile__edit-pic">
             </button>
-            <p class="profile__status">Исследователь океана</p>
+            <p class="profile__status"></p>
           </div>
           <button type="button" class="profile__add-button">
             <img src="<%=require('./images/Plus.svg')%>" alt="Добавить" class="profile__add-pic">
@@ -41,7 +48,11 @@
               <button type="button" class="cards__remove"></button>
               <div class="cards__info">
                 <h2 class="cards__name"></h2>
-                <button aria-label="Мне нравится" type="button" class="cards__button-like"></button>
+                <div class="cards__like">
+                  <button aria-label="Мне нравится" type="button" class="cards__button-like">
+                  </button>
+                  <span class="cards__like-count"></span>
+                </div>
               </div>
             </li>
           </template>
@@ -51,7 +62,25 @@
     <footer class="footer">
       <p class="footer__info">&copy; 2022 Mesto Russia</p>
     </footer>
-    <div class="popup">
+    <div class="popup popup-avatar">
+      <div class="popup__container">
+        <h3 class="popup__title">Обновить аватар</h3>
+        <button type="button" class="popup__close">
+          <img class="popup__close-pic" src="<%=require('./images/Close-icon.svg')%>" alt="Крестик для закрытия окна">
+        </button>
+        <form class="form form_edit-avatar" name="avatar-form" novalidate>
+          <fieldset class="form__user-info form__avatar-edit">
+            <div class="form__items">
+              <input type="url" value="" placeholder="Ссылка на картинку" class="form__item form__item_el_avatar-link"
+                id="avatar-link-input" required>
+              <span class="form__item-error avatar-link-input-error"></span>
+            </div>
+            <button type="submit" class="form__button form__button_edit-avatar">Сохранить</button>
+          </fieldset>
+        </form>
+      </div>
+    </div>
+    <div class="popup popup-edit-profile">
       <div class="popup__container">
         <h3 class="popup__title">Редактировать профиль</h3>
         <button type="button" class="popup__close">
@@ -91,10 +120,8 @@
                 placeholder="Название" class="form__item form__item_el_name_place" id="card-name-input" minlength="2"
                 maxlength="30" required>
               <span class="form__item-error card-name-input-error"></span>
-              <input type="url" value=""
-                data-error-message="Разрешены только латинские буквы, кириллические буквы, знаки дефиса и пробелы"
-                placeholder="Ссылка на картинку" class="form__item form__item_el_photo-link" id="card-url-input"
-                required>
+              <input type="url" value="" placeholder="Ссылка на картинку" class="form__item form__item_el_photo-link"
+                id="card-url-input" required>
               <span class="form__item-error card-url-input-error"></span>
             </div>
             <button type="submit" class="form__button form__button_add-card">Сохранить</button>
