--- a/src/index.html
+++ b/src/index.html
@@ -112,7 +112,7 @@
           <img class="popup__close-pic popup__close-pic_add-card" src="<%=require('./images/Close-icon.svg')%>"
             alt="Крестик для закрытия окна">
         </button>
-        <form class="form form_add-card" name="profile-form">
+        <form class="form form_add-card" name="profile-form" novalidate>
           <fieldset class="form__user-info form__user-info_add-card">
             <div class="form__items form-items_add-card">
               <input type="text" value="" pattern="^[a-zA-Zа-яА-Я\s-]+$"
